ios/Frameworks/ctss.xcframework/ios-arm64_x86_64-simulator/ctss.framework/Headers/ctss.h

typedef enum tss_error {
  TSS_OK,
  TSS_NO_ERROR,
  TSS_INVALID_HANDLE,
  TSS_HANDLE_IN_USE,
  TSS_INVALID_HANDLE_TYPE,
  TSS_NULL_PTR,
  TSS_INVALID_SESSION_ID,
  TSS_INVALID_SESSION_STATE,
  TSS_UNKNOWN_ERROR,
  TSS_SERIALIZATION_ERROR,
  TSS_PROCESS_MESSAGE_ERROR,
  TSS_INVALID_MSG_HASH,
  TSS_INVALID_DERIVATION_PATH_STR,
  TSS_MESSAGE_SIGNATURE,
  TSS_MESSAGE_SIGN_PK,
  TSS_MESSAGE_SIGN_VERIFY,
} tss_error;
typedef struct tss_buffer {
  const uint8_t *ptr;
  uintptr_t len;
} tss_buffer;
typedef struct Handle {
  int32_t _0;
} Handle;
void tss_buffer_free(struct tss_buffer *buf);
enum tss_error p1_keygen_init(const struct tss_buffer *session_id,
                              struct Handle keys,
                              struct Handle *output);
enum tss_error p1_ephmeral(const struct tss_buffer *session_id,
                           struct Handle party_keys,
                           struct Handle keyshare,
                           struct Handle *output);
enum tss_error p2_ephmeral(const struct tss_buffer *session_id,
                           struct Handle keyshare,
                           struct Handle *output);
enum tss_error p2_keygen_init(const struct tss_buffer *session_id, struct Handle *output);
enum tss_error p1_keygen_gen_msg1(struct Handle session, struct tss_buffer *output);
enum tss_error p2_keygen_process_msg1(struct Handle session,
                                      const struct tss_buffer *msg1,
                                      struct tss_buffer *msg2_output);
enum tss_error p1_keygen_process_msg2(struct Handle session,
                                      const struct tss_buffer *msg2,
                                      struct tss_buffer *msg3_output);
enum tss_error p2_keygen_process_msg3(struct Handle p2_handle, const struct tss_buffer *msg3);
enum tss_error p1_keygen_fini(struct Handle p1, struct Handle *output);
enum tss_error p2_keygen_fini(struct Handle p2, struct Handle *output);
enum tss_error p1_keygen_error_msg(struct Handle p1, struct tss_buffer *msg);
enum tss_error p2_keygen_error_msg(struct Handle p2, struct tss_buffer *msg);
enum tss_error p1_keyshare_from_bytes(const struct tss_buffer *buf, struct Handle *hnd);
enum tss_error p1_keyshare_to_bytes(struct Handle share, struct tss_buffer *buf);
enum tss_error p1_keyshare_public_key(struct Handle share, struct tss_buffer *buf);
enum tss_error p1_keyshare_free(struct Handle hnd);
enum tss_error p2_keyshare_from_bytes(const struct tss_buffer *buf, struct Handle *hnd);
enum tss_error p2_keyhare_to_bytes(struct Handle share, struct tss_buffer *buf);
enum tss_error p2_keyshare_public_key(struct Handle share, struct tss_buffer *buf);
enum tss_error p2_keyshare_free(struct Handle hnd);
struct Handle p1_partykeys_new(void);
enum tss_error p1_partykeys_from_bytes(const struct tss_buffer *bytes, struct Handle *hnd);