lib/src/ctss_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for CTSS Rust SDK
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class CTSSBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CTSSBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CTSSBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void tss_buffer_free(ffi.Pointer<tss_buffer> buf) {
    return _tss_buffer_free(buf);
  }

  late final _tss_buffer_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<tss_buffer>)>>(
        'tss_buffer_free',
      );
  late final _tss_buffer_free = _tss_buffer_freePtr
      .asFunction<void Function(ffi.Pointer<tss_buffer>)>();

  tss_error p1_keygen_init(
    ffi.Pointer<tss_buffer> session_id,
    Handle keys,
    ffi.Pointer<Handle> output,
  ) {
    return tss_error.fromValue(_p1_keygen_init(session_id, keys, output));
  }

  late final _p1_keygen_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<tss_buffer>,
            Handle,
            ffi.Pointer<Handle>,
          )
        >
      >('p1_keygen_init');
  late final _p1_keygen_init = _p1_keygen_initPtr
      .asFunction<
        int Function(ffi.Pointer<tss_buffer>, Handle, ffi.Pointer<Handle>)
      >();

  tss_error p1_ephmeral(
    ffi.Pointer<tss_buffer> session_id,
    Handle party_keys,
    Handle keyshare,
    ffi.Pointer<Handle> output,
  ) {
    return tss_error.fromValue(
      _p1_ephmeral(session_id, party_keys, keyshare, output),
    );
  }

  late final _p1_ephmeralPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<tss_buffer>,
            Handle,
            Handle,
            ffi.Pointer<Handle>,
          )
        >
      >('p1_ephmeral');
  late final _p1_ephmeral = _p1_ephmeralPtr
      .asFunction<
        int Function(
          ffi.Pointer<tss_buffer>,
          Handle,
          Handle,
          ffi.Pointer<Handle>,
        )
      >();

  tss_error p2_ephmeral(
    ffi.Pointer<tss_buffer> session_id,
    Handle keyshare,
    ffi.Pointer<Handle> output,
  ) {
    return tss_error.fromValue(_p2_ephmeral(session_id, keyshare, output));
  }

  late final _p2_ephmeralPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<tss_buffer>,
            Handle,
            ffi.Pointer<Handle>,
          )
        >
      >('p2_ephmeral');
  late final _p2_ephmeral = _p2_ephmeralPtr
      .asFunction<
        int Function(ffi.Pointer<tss_buffer>, Handle, ffi.Pointer<Handle>)
      >();

  tss_error p2_keygen_init(
    ffi.Pointer<tss_buffer> session_id,
    ffi.Pointer<Handle> output,
  ) {
    return tss_error.fromValue(_p2_keygen_init(session_id, output));
  }

  late final _p2_keygen_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<tss_buffer>, ffi.Pointer<Handle>)
        >
      >('p2_keygen_init');
  late final _p2_keygen_init = _p2_keygen_initPtr
      .asFunction<int Function(ffi.Pointer<tss_buffer>, ffi.Pointer<Handle>)>();

  tss_error p1_keygen_gen_msg1(Handle session, ffi.Pointer<tss_buffer> output) {
    return tss_error.fromValue(_p1_keygen_gen_msg1(session, output));
  }

  late final _p1_keygen_gen_msg1Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_keygen_gen_msg1');
  late final _p1_keygen_gen_msg1 = _p1_keygen_gen_msg1Ptr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p2_keygen_process_msg1(
    Handle session,
    ffi.Pointer<tss_buffer> msg1,
    ffi.Pointer<tss_buffer> msg2_output,
  ) {
    return tss_error.fromValue(
      _p2_keygen_process_msg1(session, msg1, msg2_output),
    );
  }

  late final _p2_keygen_process_msg1Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p2_keygen_process_msg1');
  late final _p2_keygen_process_msg1 = _p2_keygen_process_msg1Ptr
      .asFunction<
        int Function(Handle, ffi.Pointer<tss_buffer>, ffi.Pointer<tss_buffer>)
      >();

  tss_error p1_keygen_process_msg2(
    Handle session,
    ffi.Pointer<tss_buffer> msg2,
    ffi.Pointer<tss_buffer> msg3_output,
  ) {
    return tss_error.fromValue(
      _p1_keygen_process_msg2(session, msg2, msg3_output),
    );
  }

  late final _p1_keygen_process_msg2Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p1_keygen_process_msg2');
  late final _p1_keygen_process_msg2 = _p1_keygen_process_msg2Ptr
      .asFunction<
        int Function(Handle, ffi.Pointer<tss_buffer>, ffi.Pointer<tss_buffer>)
      >();

  tss_error p2_keygen_process_msg3(
    Handle p2_handle,
    ffi.Pointer<tss_buffer> msg3,
  ) {
    return tss_error.fromValue(_p2_keygen_process_msg3(p2_handle, msg3));
  }

  late final _p2_keygen_process_msg3Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p2_keygen_process_msg3');
  late final _p2_keygen_process_msg3 = _p2_keygen_process_msg3Ptr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p1_keygen_fini(Handle p1, ffi.Pointer<Handle> output) {
    return tss_error.fromValue(_p1_keygen_fini(p1, output));
  }

  late final _p1_keygen_finiPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<Handle>)
        >
      >('p1_keygen_fini');
  late final _p1_keygen_fini = _p1_keygen_finiPtr
      .asFunction<int Function(Handle, ffi.Pointer<Handle>)>();

  tss_error p2_keygen_fini(Handle p2, ffi.Pointer<Handle> output) {
    return tss_error.fromValue(_p2_keygen_fini(p2, output));
  }

  late final _p2_keygen_finiPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<Handle>)
        >
      >('p2_keygen_fini');
  late final _p2_keygen_fini = _p2_keygen_finiPtr
      .asFunction<int Function(Handle, ffi.Pointer<Handle>)>();

  tss_error p1_keygen_error_msg(Handle p1, ffi.Pointer<tss_buffer> msg) {
    return tss_error.fromValue(_p1_keygen_error_msg(p1, msg));
  }

  late final _p1_keygen_error_msgPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_keygen_error_msg');
  late final _p1_keygen_error_msg = _p1_keygen_error_msgPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p2_keygen_error_msg(Handle p2, ffi.Pointer<tss_buffer> msg) {
    return tss_error.fromValue(_p2_keygen_error_msg(p2, msg));
  }

  late final _p2_keygen_error_msgPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p2_keygen_error_msg');
  late final _p2_keygen_error_msg = _p2_keygen_error_msgPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p1_keyshare_from_bytes(
    ffi.Pointer<tss_buffer> buf,
    ffi.Pointer<Handle> hnd,
  ) {
    return tss_error.fromValue(_p1_keyshare_from_bytes(buf, hnd));
  }

  late final _p1_keyshare_from_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<tss_buffer>, ffi.Pointer<Handle>)
        >
      >('p1_keyshare_from_bytes');
  late final _p1_keyshare_from_bytes = _p1_keyshare_from_bytesPtr
      .asFunction<int Function(ffi.Pointer<tss_buffer>, ffi.Pointer<Handle>)>();

  tss_error p1_keyshare_to_bytes(Handle share, ffi.Pointer<tss_buffer> buf) {
    return tss_error.fromValue(_p1_keyshare_to_bytes(share, buf));
  }

  late final _p1_keyshare_to_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_keyshare_to_bytes');
  late final _p1_keyshare_to_bytes = _p1_keyshare_to_bytesPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p1_keyshare_public_key(Handle share, ffi.Pointer<tss_buffer> buf) {
    return tss_error.fromValue(_p1_keyshare_public_key(share, buf));
  }

  late final _p1_keyshare_public_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_keyshare_public_key');
  late final _p1_keyshare_public_key = _p1_keyshare_public_keyPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p1_keyshare_free(Handle hnd) {
    return tss_error.fromValue(_p1_keyshare_free(hnd));
  }

  late final _p1_keyshare_freePtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(Handle)>>(
        'p1_keyshare_free',
      );
  late final _p1_keyshare_free = _p1_keyshare_freePtr
      .asFunction<int Function(Handle)>();

  tss_error p2_keyshare_from_bytes(
    ffi.Pointer<tss_buffer> buf,
    ffi.Pointer<Handle> hnd,
  ) {
    return tss_error.fromValue(_p2_keyshare_from_bytes(buf, hnd));
  }

  late final _p2_keyshare_from_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<tss_buffer>, ffi.Pointer<Handle>)
        >
      >('p2_keyshare_from_bytes');
  late final _p2_keyshare_from_bytes = _p2_keyshare_from_bytesPtr
      .asFunction<int Function(ffi.Pointer<tss_buffer>, ffi.Pointer<Handle>)>();

  tss_error p2_keyhare_to_bytes(Handle share, ffi.Pointer<tss_buffer> buf) {
    return tss_error.fromValue(_p2_keyhare_to_bytes(share, buf));
  }

  late final _p2_keyhare_to_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p2_keyhare_to_bytes');
  late final _p2_keyhare_to_bytes = _p2_keyhare_to_bytesPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p2_keyshare_public_key(Handle share, ffi.Pointer<tss_buffer> buf) {
    return tss_error.fromValue(_p2_keyshare_public_key(share, buf));
  }

  late final _p2_keyshare_public_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p2_keyshare_public_key');
  late final _p2_keyshare_public_key = _p2_keyshare_public_keyPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p2_keyshare_free(Handle hnd) {
    return tss_error.fromValue(_p2_keyshare_free(hnd));
  }

  late final _p2_keyshare_freePtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(Handle)>>(
        'p2_keyshare_free',
      );
  late final _p2_keyshare_free = _p2_keyshare_freePtr
      .asFunction<int Function(Handle)>();

  Handle p1_partykeys_new() {
    return _p1_partykeys_new();
  }

  late final _p1_partykeys_newPtr =
      _lookup<ffi.NativeFunction<Handle Function()>>('p1_partykeys_new');
  late final _p1_partykeys_new = _p1_partykeys_newPtr
      .asFunction<Handle Function()>();

  tss_error p1_partykeys_from_bytes(
    ffi.Pointer<tss_buffer> bytes,
    ffi.Pointer<Handle> hnd,
  ) {
    return tss_error.fromValue(_p1_partykeys_from_bytes(bytes, hnd));
  }
